# crawler-demo

./: .gitignore  README.md  pyproject.toml
src/crawler_demo/: __init__.py  __main__.py  cli.py
src/crawler_demo/core/: __init__.py  base.py  exceptions.py  http.py  registry.py
src/crawler_demo/spiders/: __init__.py
src/crawler_demo/spiders/github_projects/: __init__.py  spider.py
src/crawler_demo/spiders/qheze_site/: __init__.py  spider.py
src/crawler_demo/spiders/site_mirror/: __init__.py  spider.py
src/crawler_demo/spiders/weibo_hot/: __init__.py  spider.py
tests/: test_qheze_site_spider.py
